# MuDynamicNormalMap

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
ExtraRE/include/B/: BSFaceGenBaseMorphExtraData.h
include/: .clang-format  ActorVertexHasher.h  Common.h  Condition.h  Config.h  Geometry.h  Hook.h  HookEvent.h  MiniBenchmark.h  NormalMapStore.h  ObjectNormalMapBaker.h  ObjectNormalMapUpdater.h  PCH.h  PapyrusScripts.h  RGBA.h  ShaderManager.h  Store.h  TaskManager.h  TextureManager.h  ThreadPool.h  Utility.hpp  bc7e_ispc__gen.py  bc7e_ispc_avx.h  bc7e_ispc_avx2.h  bc7e_ispc_sse2.h  bc7e_ispc_sse4.h  lString.h  nifUtil.h
include/Interface/: Interface.h  InterfaceImpl.h
include/NiOverride/: FaceMorphInterface.h  IPluginInterface.h  NiOverride.h  NiTransformInterface.h  OverrideInterface.h  OverrideVariant.h
shader/: BakeObjectNormalMap.hlsl  BleedTexture.hlsl  GenerateMips.hlsl  MergeTexture.hlsl  MiniBenchmark.hlsl  ObjectNormalMapBaker.hlsl  TexturePostProcessing.hlsl  UpdateNormalMap.hlsl  UpdateObjectNormalMap.hlsl  VSPSBakeObjectNormalMap.hlsl
src/: .clang-format  ActorVertexHasher.cpp  Common.cpp  Condition.cpp  Config.cpp  Geometry.cpp  Hook.cpp  HookEvent.cpp  Main.cpp  NormalMapStore.cpp  ObjectNormalMapBaker.cpp  ObjectNormalMapUpdater.cpp  PapyrusScripts.cpp  ShaderManager.cpp  Store.cpp  TaskManager.cpp  TextureManager.cpp  ThreadPool.cpp  nifUtil.cpp
